Updating website to fix incorrect URL link. Website Version 0.2

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         <div class = "timeline__point"></div>
                     </div>
                     <div class="timeline__component timeline__component--bg">
-                        <p><a href="https://projects-web.engr.colostate.edu/ece-sr-design/AY19/brewery/index.html"><img class = "csu-logo" src="images/CSU-Ram-357.png" alt=""></a></p>
+                        <p><a href="https://www.engr.colostate.edu/cbe/"><img class = "csu-logo" src="images/CSU-Ram-357.png" alt=""></a></p>
                         <h2 class="timeline__title">B.S. Chemical and Biological Engineering - Colorado State University</h2>
                         <p class = "timeline__paragraph">Graduated: May 2020 | Cumulative-GPA: 3.67 / 4.00</p>
                     </div>
@@ -338,7 +338,7 @@
             <p>Built By Cole Harris 2022</p>
         </div>
     </footer>
-    
+
     <script src ="index.js" charset="utf-8"></script>
 </body>
 </html>
