Updated Experience Section. Website Version 0.3

--- a/index.html
+++ b/index.html
@@ -298,16 +298,16 @@
                         </div>
                     </div>
     
-                    <div class="timeline__component timeline__component--left">
+                    <div class="timeline__component timeline__component--left timeline__component--bottom">
                         <div class = "timeline__date timeline__date--right">
                             <h4>May 2018 - August 2018</h4>
                         </div>
                     </div>
                     <div class = "timeline__middle">
                         <div class = "timeline__point"></div>
-                        <div class = "timeline__point"></div>
+                        <div class = "timeline__point timeline__point--bottom"></div>
                     </div>
-                    <div class="timeline__component timeline__component--bg">
+                    <div class="timeline__component timeline__component--bg timeline__component--bottom">
                         <p><a href="https://silverbulletcorp.com/"><img class = "sbwc-logo" src="images/Silver-Bullet_Logo_transparent-background.png" alt=""></a></p>
                         <h2 class="timeline__title">Engineering Intern - Silver Bullet Water Treatment Company, LLC.</h2>
                         <p class = "timeline__paragraph">Tasked with managing and performing a summer-long research project on algae growth inhibition from four different water 
