Added ML project and small updates to accomodate completion of Fall 2022 semester.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <h2 class="q-stats">Quick Stats</h2>
                         <p><b>Current Degree:</b> B.S. Computer Science</p>
                         <p><b>Expected Graduation:</b> December 2023</p>
-                        <p><b>Major GPA:</b> 4.0 / 4.0</p> 
+                        <p><b>Major GPA:</b> 3.94 / 4.0</p> 
                     </div>
                     <div id = "about-bio" class="col-8 align-items-center">
                         <h1>About Me</h1>
@@ -181,7 +181,14 @@
         <section id="projects" class="anchor">
             <div class="light-section site-width text-center">
                 <h1>Projects</h1>
-                <h2 class="coming-soon">Coming Soon!</h2>
+                <div class="card" style="width: 18rem;">
+                    <img src="images/CS345ProjectAccuracy.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">CS345 Machine Learning Foundations and Practices: Final Project</h5>
+                      <p class="card-text">CS345 Final Project: Using a Convolutional Neural Network and transfer learning for Melanoma classification on skin lesion images.</p>
+                      <a href="https://github.com/Cole-T-Harris/CS345-Final-Project" class="btn btn-dark">Github Repository</a>
+                    </div>
+                  </div>
             </div>
         </section>
         <section id="experience" class="anchor">
@@ -202,11 +209,12 @@
                         <p><a href="https://compsci.colostate.edu/"><img class = "csu-logo" src="images/CSU-Ram-357.png" alt=""></a></p>
                         <h2 class="timeline__title"> B.S. Computer Science Student - Colorado State University</h2>
                         <p class = "timeline__paragraph">Current Course:</p>
+                        <p class = "timeline__paragraph"></p>
+                        <p class = "timeline__paragraph">Completed Courses:</p>
                         <p class = "timeline__paragraph"><a href="https://www.cs.colostate.edu/~cs163/.Fall22/">CS163 Java Programming I (Java)</a> | 
                             <a href="https://www.cs.colostate.edu/~cs165/.Fall22/#/">CS165 Data Structures (Java)</a> | 
-                            <a href="https://www.cs.colostate.edu/~cs220/fall22/#/">CS220 Discrete Structures (Python)</a></p>
-                        <p class = "timeline__paragraph">Completed Courses:</p>
-                        <p class = "timeline__paragraph"><a href="https://cs.colostate.edu/~cs253/Fall22/">CS253 Software Development in C++ (C++)</a> | 
+                            <a href="https://www.cs.colostate.edu/~cs220/fall22/#/">CS220 Discrete Structures (Python)</a> | 
+                            <a href="https://cs.colostate.edu/~cs253/Fall22/">CS253 Software Development in C++ (C++)</a> | 
                             <a href="https://www.cs.colostate.edu/~cs250/">CS280A1/CS250 Foundations of Computer Systems (Java)</a> | 
                             <a href="https://github.com/asabenhur/CS345/tree/master/fall22">CS345 Machine Learning Foundations and Practice (Python)</a></p>
                     </div>
