Small updates to incldue new project and graduation

--- a/index.html
+++ b/index.html
@@ -75,15 +75,16 @@
                         <img class = "profile-pic" src="images/Profile-Pic-Thumbnail.jpg" alt="">
                         <h2 class="q-stats">Quick Stats</h2>
                         <p><b>Current Degree:</b> B.S. Computer Science</p>
-                        <p><b>Expected Graduation:</b> December 2023</p>
+                        <p><b>Graduated:</b> December 2023</p>
                         <p><b>Major GPA:</b> 3.84 / 4.0</p> 
                     </div>
                     <div id = "about-bio" class="col-8 align-items-center">
                         <h1>About Me</h1>
-                        <p class="bio">Currently working towards a <b>B.S. in Computer Science at Colorado State University</b> with plans to <b>graduate in December 2023</b>. Previously graduated from 
+                        <p class="bio">Recent graduate with a <b>B.S. in Computer Science at Colorado State University</b>. Previously graduated from 
                             Colorado State University with a B.S. in Chemical and Biological Engineering in May 2020. <b>Worked in industry as a Controls Engineer for 1.5 years, mainly working 
                             for Pharmaceutical and Water/Wastewater clients</b>. Main tasks included developing software design specifications, developing testing documentation, PLC programming, onsite 
-                            commissioning, and communicating with the client with questions and answers towards the project.             
+                            commissioning, and communicating with the client with questions and answers towards the project. Recent experience working on an existing code base and <b>developing a full-stack 
+                            webpage for a test automation tool at Visa</b>.          
                         </p>
                         <p class="bio"><b>Excited to be taking this next step and eager to learn more towards Software development in order to provide software/applications that benefit customers, 
                             perform well, and are easily maintainable</b></p>
@@ -213,7 +214,7 @@
                             <img src="images/django_backend.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Django Backend Hosted Website</h5>
-                              <p class="card-text">Django Backend that serves this webpage and react app and acts as a Restful API. Hosted utilizing Heroku with a custom domain forward to heroku app.</p>
+                              <p class="card-text">Django Backend that serves this webpage and react app and acts as a Restful API. Hosted utilizing Heroku with a custom domain forwarding to heroku app.</p>
                               <a href="/" class="btn btn-dark">Go to HomePage</a>
                             </div>
                         </div>
@@ -225,6 +226,16 @@
                               <h5 class="card-title">Ordered Grocery List React App</h5>
                               <p class="card-text">React App that sends API requests to Django Backend RestfulAPI that sends OAuth2.0 authenticated API requests to Kroger. Provides current store data and can export ordered list</p>
                               <a href="/grocery_app/" class="btn btn-dark">Go To Web App</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col card-column-styling d-flex align-items-center justify-content-center">
+                        <div class="card" style="width: 18rem;">
+                            <img src="images/AWS-Cloud.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Website Migrated to AWS</h5>
+                              <p class="card-text">Personal website migrated to AWS with a fastAPI backend in a docker container on an AWS EC2 instance, React app, and static webpages served via AWS S3, and domain routing using AWS Route 52</p>
+                              <a href="/" class="btn btn-dark">Go to HomePage</a>
                             </div>
                         </div>
                     </div>
@@ -240,11 +251,7 @@
                     <div class="timeline__component timeline__component--left timeline__component--bg">
                         <p><a href="https://compsci.colostate.edu/"><img class = "csu-logo" src="images/CSU-Ram-357.png" alt=""></a></p>
                         <h2 class="timeline__title"> B.S. Computer Science Student - Colorado State University</h2>
-                        <p class = "timeline__paragraph">Current Course:</p>
-                        <p class = "timeline__paragraph"><a href="https://www.cs.colostate.edu/~cs356/#/">CS354 System Security</a> | 
-                            <a href="https://www.cs.colostate.edu/~cs414/yr2023fa/#/">CS414 Object-Oriented Design</a> |
-                            <a href="https://www.cs.colostate.edu/~cs462/yr2023fa/#/">CS462 Engaging in Virtual Worlds</a>
-                        </p>
+                        <p class = "timeline__paragraph">Graduated: December 2023 | Major GPA: 3.85 / 4.00</p>
                         <p class = "timeline__paragraph">Completed Courses:</p>
                         <p class = "timeline__paragraph"><a href="https://www.cs.colostate.edu/~cs163/.Fall22/">CS163 Java Programming I (Java)</a> | 
                             <a href="https://www.cs.colostate.edu/~cs165/.Fall22/#/">CS165 Data Structures (Java)</a> | 
@@ -256,6 +263,9 @@
                             <a href="https://www.cs.colostate.edu/~cs320/Spring23/#/">CS320 Algorithm Theory and Practice (Python)</a> | 
                             <a href="https://www.cs.colostate.edu/~cs370/">CS370 Operating Systems (C / Java)</a> | 
                             <a href="https://www.cs.colostate.edu/~cs430dl/#/">CS430 Database Management Systems (SQL / Java)</a>
+                            <a href="https://www.cs.colostate.edu/~cs356/#/">CS354 System Security</a> | 
+                            <a href="https://www.cs.colostate.edu/~cs414/yr2023fa/#/">CS414 Object-Oriented Design</a> |
+                            <a href="https://www.cs.colostate.edu/~cs462/yr2023fa/#/">CS462 Engaging in Virtual Worlds</a>
                         </p>
                     </div>
                     <div class = "timeline__middle">
@@ -263,7 +273,7 @@
                     </div>
                     <div class="timeline__component">
                         <div class = "timeline__date">
-                            <h4>May 2022 - Present</h4>
+                            <h4>May 2022 - December 2023</h4>
                         </div>
                     </div>
 
@@ -422,7 +432,7 @@
             <a href="https://github.com/Cole-T-Harris"><i class="social-icon fa-brands fa-github fa-2x"></i></a>
             <a href="https://www.linkedin.com/in/cole-t-harris/"><i class="social-icon fa-brands fa-linkedin fa-2x"></i></a>
             <a href="mailto:cole.t.harr@gmail.com"><i class = "social-icon fa-solid fa-envelope fa-2x"></i></a>
-            <p>Built By Cole Harris 2023</p>
+            <p>Built By Cole Harris 2024</p>
         </div>
     </footer>
 
