Updates to resume and wording

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <h2 class="q-stats">Quick Stats</h2>
                         <p><b>Current Degree:</b> B.S. Computer Science</p>
                         <p><b>Graduated:</b> December 2023</p>
-                        <p><b>Major GPA:</b> 3.84 / 4.0</p> 
+                        <p><b>Major GPA:</b> 3.85 / 4.0</p> 
                     </div>
                     <div id = "about-bio" class="col-8 align-items-center">
                         <h1>About Me</h1>
@@ -214,8 +214,8 @@
                             <img src="images/django_backend.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Django Backend Hosted Website</h5>
-                              <p class="card-text">Django Backend that serves this webpage and react app and acts as a Restful API. Hosted utilizing Heroku with a custom domain forwarding to heroku app.</p>
-                              <a href="/" class="btn btn-dark">Go to HomePage</a>
+                              <p class="card-text">Django backend that serves webpages and react app and acts as a Restful API. Hosted utilizing Heroku with a custom domain forwarding to heroku app.</p>
+                              <a href="https://github.com/Cole-T-Harris/Django-FullStack-Website" class="btn btn-dark">Github Repository</a>
                             </div>
                         </div>
                     </div>
@@ -224,8 +224,9 @@
                             <img src="images/Grocery_App.png" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Ordered Grocery List React App</h5>
-                              <p class="card-text">React App that sends API requests to fastAPI (previously Django) Backend RestfulAPI that sends OAuth2.0 authenticated API requests to Kroger. Provides current store data and can export ordered list</p>
+                              <p class="card-text">React app that sends API requests to fastAPI (previously Django) backend RESTful API that sends OAuth2.0 authenticated API requests to Kroger. Provides current store data and can export ordered list</p>
                               <a href="/grocery_app/" class="btn btn-dark">Go To Web App</a>
+                              <a href="https://github.com/Cole-T-Harris/grocery-list-frontend" class="btn btn-dark  github-btn">Github Repository</a>
                             </div>
                         </div>
                     </div>
@@ -234,8 +235,8 @@
                             <img src="images/AWS-Cloud.png" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Website Migrated to AWS</h5>
-                              <p class="card-text">Personal website migrated to AWS with a fastAPI backend in a docker container on an AWS EC2 instance, React app, and static webpages served via AWS S3, and domain routing using AWS Route 52</p>
-                              <a href="/" class="btn btn-dark">Go to HomePage</a>
+                              <p class="card-text">Personal website migrated to AWS with a fastAPI backend in a docker container on an AWS EC2 instance. Frontend React app and static webpages are stored in AWS S3 buckets and served via AWS Cloudfront with DNS routing managed via Route 53</p>
+                              <a href="https://github.com/Cole-T-Harris/fastapi-pw-api" class="btn btn-dark">Github Repository</a>
                             </div>
                         </div>
                     </div>
