Add new Lambda project

--- a/index.html
+++ b/index.html
@@ -240,6 +240,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col card-column-styling d-flex align-items-center justify-content-center">
+                        <div class="card" style="width: 18rem;">
+                            <img src="images/AWS-Lambda.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">AWS API Gateway and Lambda REST API</h5>
+                              <p class="card-text">Transformed the FastAPI REST API, previously hosted on an EC2 instance, into a serverless architecture on AWS. This involved refactoring the Python codebase and deploying multiple AWS Lambda functions, seamlessly integrated with an AWS API Gateway.</p>
+                              <a href="https://github.com/Cole-T-Harris/personalwebsite-apigateway" class="btn btn-dark">Github Repository</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
